# mvi

./: .gitignore  PROJECT_PROMPT.md  README.md  REPORT.md  index.html
haskell/mvi/: Main.hs  mvi.cabal
haskell/mvi/src/: Acceptance.hs  App.hs  Spec.hs
haskell/mvvm/: Main.hs  mvvm.cabal
haskell/mvvm/src/: App.hs  Spec.hs
kotlin/mvi/: build.gradle.kts
kotlin/mvi/src/main/kotlin/mvi/: App.kt  Main.kt
kotlin/mvi/src/test/kotlin/mvi/: AcceptanceTest.kt  ReducerTest.kt
kotlin/mvvm/: build.gradle.kts  settings.gradle.kts
kotlin/mvvm/src/main/kotlin/mvvm/: Main.kt  ViewModel.kt
kotlin/mvvm/src/test/kotlin/mvvm/: AcceptanceTest.kt  ViewModelTest.kt
