cabal-version: 3.0
name: mvi
version: 0.1.0.0

executable mvi
  main-is: Main.hs
  other-modules: App
  hs-source-dirs: ., src
  build-depends: base
  default-language: Haskell2010

test-suite mvi-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: App, Acceptance
  hs-source-dirs: ., src
  build-depends: base
  default-language: Haskell2010
